Commit de prueba 2.1

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba de GIT</title>
+    <title>Prueba de GIT 2.1</title>
 </head>
 
 <body>
-    <p>Este es un index básico</p>
+    <p>Este es otro index</p>
 </body>
 </html> 
