--- a/index.html
+++ b/index.html
@@ -1,13 +1,171 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba de GIT 2.1</title>
-</head>
+    <html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device=width, initial-scale=1.0">
+        <title>Sustenta Tienda</title>
+        <meta name="description" content="En este sitio encontrarás productos cosméticos de origen natural para el cuidado personal y del medio ambiente.">
+        <meta name="keywords" content="NATURAL, VEGANO, CRUELTY FREE, MEDIO AMBIENTE">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="diseno.css">
+        <link rel="icon" href="../secciones/logo sustenta.ico">
+        <!--Tipografías-->
+        <link rel ="preconnect" href ="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="hoja de estilo">
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="hoja de estilo">
+
+    </head>
+
+<header>
+  <p class="centrar espaciopalabra estiloParrafo otrafuente textgrey">Productos naturales multimarca para el cuidad personal y del medio ambiente</p>
+</header>
+<nav class="navbar navbar-expand-lg">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">
+      <img src="../secciones/Imagenes/logo sustenta.png" alt="logo">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active textgrey" aria-current="page" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle textgrey" aria-current="page" href="Productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown">Productos
+            </a>
+        <ul class="dropdown-menu centrar" style="background-color: rgb(236, 222, 225);" aria-labelledby="navbarDropdownMenuLink">
+          <li><a class="dropdown-item textgrey" style="background-color: rgb(236, 222, 225);" href="Productos.html">Cuidado facial</a></li>
+          <li><a class="dropdown-item textgrey" style="background-color: rgb(236, 222, 225);" href="Productos.html">Cuidado Corporal</a></li>
+          <li><a class="dropdown-item textgrey" style="background-color: rgb(236, 222, 225);" href="Productos.html">Cuidado Capilar</a></li>
+          <li><a class="dropdown-item textgrey" style="background-color: rgb(236, 222, 225);" href="Productos.html">Cuidado Bucal</a></li>
+          <li><a class="dropdown-item textgrey" style="background-color: rgb(236, 222, 225);" href="Productos.html">Hogar</a></li>
+        </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active textgrey" aria-current="page" href="Información.html">Información</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link textgrey" aria-current="page" href="Contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+  </div>
+  <div class="d-flex flex-row-reverse bd-highlight">
+    <div class="p-2 bd-highlight"><button type="button" class="btn btn-secondary btn-lg" style="background-image: url(../secciones/Imagenes/carrito\ de\ compras.svg); height: 30px;"></button></div> 
+  </div>
+</nav>
+
 
 <body>
-    <p>Este es otro index</p>
+<section class="container-fluid">
+  <div class="col-md-12">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="1500">
+                <img src="Imagenes/A2.png" class="d-block-inline w-100" alt="foto">
+              </div>
+              <div class="carousel-item" data-bs-interval="1500">
+                <img src="Imagenes/B2.png" class="d-block-inline w-100" alt="foto">
+              </div>
+              <div class="carousel-item" data-bs-interval="1500">
+                <img src="Imagenes/C2.png" class="d-block-inline w-100" alt="foto">
+              </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Siguiente</span>
+        </a>
+      </div>
+</section>
+<hr>
+
+<section>
+<article class="indexArticle">
+  <h3 class="textgreen fuente1 titulo centrar">Productos destacados</h3></div>
+    <div class="container centrar">
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="../secciones/Imagenes/IMG-20210412-WA0020-min.jpg" class="card-img-top" alt="bálsamo labial">
+            <div class="card-body">
+              <h5 class="card-title otrafuente">Bálsamo labial</h5>
+              <p class="card-text otrafuente">Compuesto por mantecas y aceites puros. Hidra, nutre, protege y repara.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted"><a href="Productos.html">Ver más productos</a></small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="../secciones/Imagenes/15.jpg" class="card-img-top" alt="velas">
+            <div class="card-body">
+              <h5 class="card-title otrafuente">Combo aromático</h5>
+              <p class="card-text otrafuente">Vela de cera de soja en macetas de cemento reutilizables. 
+              Sahúmos de diferentes variedades (cedro, lavanda, romero, olivo y laurel).</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted"><a href="Productos.html">Ver más productos</a></small>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 centrar">
+            <img src="../secciones/Imagenes/IMG-20210412-WA0019-min.jpg" class="card-img-top" alt="cepillo de bambú para cabello">
+            <div class="card-body">
+              <h5 class="card-title otrafuente">Cepillo de bambú para cabello</h5>
+              <p class="card-text otrafuente">Beneficios de antiestática y antifriz, realiza masaje capilar gracias a sus puntas redondeadas.</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted"><a href="Productos.html">Ver más productos</a></small>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+</article>
+<hr>
+
+<div class="row justify-content-center">
+  <div class="newsletter">
+  <label for="exampleFormControlInput1" class=" titulo textgreen"><h3>Suscribite a nuestro Newsletter</h3></label>
+  <div class="mb-3 inNews">
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@email.com">
+    <button type="button" class="btn btn-outline-secondary">Enviar</button>
+  </div>
+  </div>
+</div>
+
+
+<div class="footer">
+    <h6>Redes sociales
+    <ul>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Facebook</a></li>
+    </h6>
+    </ul>
+</div>
+
+</section>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+ 
 </body>
-</html> 
+</html>
+
