--- a/Productos.html
+++ b/Productos.html
@@ -114,8 +114,7 @@
           <div class="card sectProd">
             <img src="../secciones/Imagenes/IMG-20210412-WA0031-min.jpg" class="card-img-top" alt="crema de ordeñe">
               <div class="card-body otrafuente">
-                <h5 class="card-title">Crema de ordeñe</h5>
-                <p class="card-text">Contiene propóleos, aloe vera, vit A y E. 250grs</p>
+                  <h5 class="card-title">Crema de ordeñe</h5>
                 <p class="card-text">$500</p>
                 <button type="button" class="btn btn-secondary btn-sm">Añadir al carrito</button>
               </div>
@@ -125,7 +124,7 @@
             <div class="card sectProd">
               <img src="../secciones/Imagenes/IMG-20210412-WA0030-min.jpg" class="card-img-top" alt="copa menstrual">
               <div class="card-body otrafuente">
-                <h5 class="card-title">Copa menstrual Maggacup</h5>
+                <h5 class="card-title">Copa menstrual</h5>
                 <p class="card-text">$1500</p>
                 <button type="button" class="btn btn-secondary btn-sm">Añadir al carrito</button>
               </div>
@@ -135,7 +134,7 @@
             <div class="card sectProd">
               <img src="../secciones/Imagenes/IMG-20210412-WA0028-min.jpg" class="card-img-top" alt="toallita de tela">
               <div class="card-body otrafuente">
-                <h5 class="card-title">Toallitas de tela reutilizables</h5>
+                <h5 class="card-title">Toallitas de tela</h5>
                 <p class="card-text">$330</p>
                 <button type="button" class="btn btn-secondary btn-sm">Añadir al carrito</button>
               </div>
@@ -145,8 +144,7 @@
             <div class="card sectProd">
               <img src="../secciones/Imagenes/9.jpg" class="card-img-top" alt="desodorantes">
               <div class="card-body otrafuente">
-                <h5 class="card-title">Desodorantes</h5>
-                <p class="card-text">Cítrico/jazmín/lavanda y romero/lemongrass</p>
+                <h5 class="card-title">Desodorantes naturales</h5>
                 <p class="card-text">$300</p>
                 <button type="button" class="btn btn-secondary btn-sm">Añadir al carrito</button>
               </div>
@@ -157,7 +155,6 @@
               <img src="../secciones/Imagenes/16.jpg" class="card-img-top" alt="jabón de glicerina">
               <div class="card-body otrafuente">
                 <h5 class="card-title">Jabón de glicerina</h5>
-                <p class="card-text">Propóleos/rosa mosqueta/miel</p>
                 <p class="card-text">$180</p>
                 <button type="button" class="btn btn-secondary btn-sm">Añadir al carrito</button>
               </div>
@@ -193,7 +190,7 @@
                 <div class="card sectProd">
                   <img src="../secciones/Imagenes/7.jpg" class="card-img-top" alt="shampoo sólido">
                   <div class="card-body otrafuente">
-                    <h5 class="card-title">Shampoo sólido (manzanilla y eucaliptus/romero y ortiga)</h5>
+                    <h5 class="card-title">Shampoo sólido</h5>
                     <p class="card-text">$400</p>
                     <button type="button" class="btn btn-secondary btn-sm">Añadir al carrito</button>
                   </div>
@@ -213,7 +210,7 @@
                 <div class="card sectProd">
                   <img src="../secciones/Imagenes/19.jpg" class="card-img-top" alt="shampoo líquido">
                   <div class="card-body otrafuente">
-                    <h5 class="card-title">Shampoo líquido (aloe vera y miel/propóleos y miel/tratante de ortiga)</h5>
+                    <h5 class="card-title">Shampoo</h5>
                     <p class="card-text">$490</p>
                     <button type="button" class="btn btn-secondary btn-sm">Añadir al carrito</button>
                   </div>
@@ -223,7 +220,7 @@
                 <div class="card sectProd">
                   <img src="../secciones/Imagenes/13.jpg" class="card-img-top" alt="acondicionador líquido">
                   <div class="card-body otrafuente">
-                    <h5 class="card-title">Acondicionador liquido con jalea real y algas</h5>
+                    <h5 class="card-title">Acondicionador</h5>
                     <p class="card-text">$490</p>
                     <button type="button" class="btn btn-secondary btn-sm">Añadir al carrito</button>
                   </div>
@@ -233,7 +230,7 @@
                 <div class="card sectProd">
                   <img src="../secciones/Imagenes/IMG-20210412-WA0019-min.jpg" class="card-img-top" alt="cepillo de bambú para cabello">
                   <div class="card-body otrafuente">
-                    <h5 class="card-title">Cepillo de bambú para cabello</h5>
+                    <h5 class="card-title">Cepillo de bambú</h5>
                     <p class="card-text">$630</p>
                     <button type="button" class="btn btn-secondary btn-sm">Añadir al carrito</button>
                   </div>
