--- a/index.html
+++ b/index.html
@@ -17,51 +17,43 @@
 
     </head>
 
-<header>
-  <p class="centrar espaciopalabra estiloParrafo otrafuente textgrey">Productos naturales multimarca para el cuidad personal y del medio ambiente</p>
-</header>
-<nav class="navbar navbar-expand-lg">
+<header class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">
-      <img src="../secciones/Imagenes/logo sustenta.png" alt="logo">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <a class="navbar-brand" href="index.html">
+        <img src="../secciones/Imagenes/logo sustenta.png" alt="logo" style="width: 150px;">
+      </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active textgrey" aria-current="page" href="index.html">Inicio</a>
-          </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle textgrey" aria-current="page" href="Productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown">Productos
-            </a>
-        <ul class="dropdown-menu centrar" style="background-color: rgb(236, 222, 225);" aria-labelledby="navbarDropdownMenuLink">
-          <li><a class="dropdown-item textgrey" style="background-color: rgb(236, 222, 225);" href="Productos.html">Cuidado facial</a></li>
-          <li><a class="dropdown-item textgrey" style="background-color: rgb(236, 222, 225);" href="Productos.html">Cuidado Corporal</a></li>
-          <li><a class="dropdown-item textgrey" style="background-color: rgb(236, 222, 225);" href="Productos.html">Cuidado Capilar</a></li>
-          <li><a class="dropdown-item textgrey" style="background-color: rgb(236, 222, 225);" href="Productos.html">Cuidado Bucal</a></li>
-          <li><a class="dropdown-item textgrey" style="background-color: rgb(236, 222, 225);" href="Productos.html">Hogar</a></li>
-        </ul>
+            <a class="nav-link dropdown-toggle textgrey fuente1" href="Productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: transparent;">
+          <li><a class="dropdown-item textgrey fuente1 centrar" href="Productos.html">Facial</a></li>
+          <li><a class="dropdown-item textgrey fuente1 centrar" href="Productos.html">Corporal</a></li>
+          <li><a class="dropdown-item textgrey fuente1 centrar" href="Productos.html">Capilar</a></li>
+          <li><a class="dropdown-item textgrey fuente1 centrar" href="Productos.html">Bucal</a></li>
+              </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link active textgrey" aria-current="page" href="Información.html">Información</a>
+            <a class="nav-link textgrey fuente1" href="Información.html">Información</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link textgrey" aria-current="page" href="Contacto.html">Contacto</a>
+            <a class="nav-link textgrey fuente1" href="Contacto.html">Contacto</a>
           </li>
         </ul>
-      </div>
+        </div>
   </div>
   <div class="d-flex flex-row-reverse bd-highlight">
     <div class="p-2 bd-highlight"><button type="button" class="btn btn-secondary btn-lg" style="background-image: url(../secciones/Imagenes/carrito\ de\ compras.svg); height: 30px;"></button></div> 
   </div>
-</nav>
-
+</header>
 
 <body>
-<section class="container-fluid">
-  <div class="col-md-12">
+
+<section class="container-fluid" style="text-align:right; padding-top: 5rem;">
+  <div class="col-md-10">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -70,13 +62,13 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="1500">
-                <img src="Imagenes/A2.png" class="d-block-inline w-100" alt="foto">
+                <img src="Imagenes/A2.png" class="d-block-inline" style="width: 80%;" alt="foto">
               </div>
               <div class="carousel-item" data-bs-interval="1500">
-                <img src="Imagenes/B2.png" class="d-block-inline w-100" alt="foto">
+                <img src="Imagenes/B2.png" class="d-block-inline" style="width: 80%;" alt="foto">
               </div>
               <div class="carousel-item" data-bs-interval="1500">
-                <img src="Imagenes/C2.png" class="d-block-inline w-100" alt="foto">
+                <img src="Imagenes/C2.png" class="d-block-inline" style="width: 80%;" alt="foto">
               </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -87,7 +79,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Siguiente</span>
         </a>
-      </div>
+  </div>
 </section>
 <hr>
 
