--- a/Contacto.html
+++ b/Contacto.html
@@ -14,43 +14,38 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,900;1,300&display=swap" rel="stylesheet">
 </head>
  
-<nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
+<header class="navbar navbar-expand-lg navbar-light">
+  <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img src="../secciones/Imagenes/logo sustenta.png" alt="logo">
+        <img src="../secciones/Imagenes/logo sustenta.png" alt="logo" style="width: 150px;">
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active textgrey" aria-current="page" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle textgrey" aria-current="page" href="Productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown">Productos
-              </a>
-          <ul class="dropdown-menu centrar" style="background-color: rgb(236, 222, 225);" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item textgrey" style="background-color: rgb(236, 222, 225);" href="Productos.html">Cuidado facial</a></li>
-            <li><a class="dropdown-item textgrey" style="background-color: rgb(236, 222, 225);" href="Productos.html">Cuidado Corporal</a></li>
-            <li><a class="dropdown-item textgrey" style="background-color: rgb(236, 222, 225);" href="Productos.html">Cuidado Capilar</a></li>
-            <li><a class="dropdown-item textgrey" style="background-color: rgb(236, 222, 225);" href="Productos.html">Cuidado Bucal</a></li>
-            <li><a class="dropdown-item textgrey" style="background-color: rgb(236, 222, 225);" href="Productos.html">Hogar</a></li>
-          </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Información.html">Información</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="Contacto.html">Contacto</a>
-            </li>
-          </ul>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle textgrey fuente1" href="Productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: transparent;">
+          <li><a class="dropdown-item textgrey fuente1 centrar" href="Productos.html">Facial</a></li>
+          <li><a class="dropdown-item textgrey fuente1 centrar" href="Productos.html">Corporal</a></li>
+          <li><a class="dropdown-item textgrey fuente1 centrar" href="Productos.html">Capilar</a></li>
+          <li><a class="dropdown-item textgrey fuente1 centrar" href="Productos.html">Bucal</a></li>
+              </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link textgrey fuente1" href="Información.html">Información</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link textgrey fuente1" href="Contacto.html">Contacto</a>
+          </li>
+        </ul>
         </div>
-    </div>
-    <div class="d-flex flex-row-reverse bd-highlight">
-      <div class="p-2 bd-highlight"><button type="button" class="btn btn-secondary btn-lg" style="background-image: url(../secciones/Imagenes/carrito\ de\ compras.svg); height: 30px;"></button></div> 
-    </div>
-</nav>
+  </div>
+  <div class="d-flex flex-row-reverse bd-highlight">
+    <div class="p-2 bd-highlight"><button type="button" class="btn btn-secondary btn-lg" style="background-image: url(../secciones/Imagenes/carrito\ de\ compras.svg); height: 30px;"></button></div> 
+  </div>
+</header>
 
 <body>
   <section>
