--- a/Información.html
+++ b/Información.html
@@ -25,6 +25,9 @@
         </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
+           <li class="nav-item">
+            <a class="nav-link textgrey fuente1" href="index.html">Inicio</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle textgrey fuente1" href="Productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: transparent;">
