--- a/Información.html
+++ b/Información.html
@@ -53,7 +53,7 @@
 
 <body>
 <section>
-<div class="container">
+<div class="container"  style="padding-top: 5rem;">
       <div class="col-md-12 col-xs-12">
         <div class="centrar">
         <img src="../secciones/Imagenes/imagen1.jpg" alt="eco">
