--- a/Contacto.html
+++ b/Contacto.html
@@ -52,7 +52,7 @@
 
 <body>
   <section>
-    <div class="container">
+    <div class="container"  style="padding-top: 5rem;">
       <div class="row col-md-12">
         <form action="#" method="GET" enctype="multipart/form-data">
         <fieldset>
