--- a/Productos.html
+++ b/Productos.html
@@ -30,11 +30,11 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle textgrey fuente1" href="Productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: transparent;">
-          <li><a class="dropdown-item textgrey fuente1 centrar" href="Productos.html">Facial</a></li>
-          <li><a class="dropdown-item textgrey fuente1 centrar" href="Productos.html">Corporal</a></li>
-          <li><a class="dropdown-item textgrey fuente1 centrar" href="Productos.html">Capilar</a></li>
-          <li><a class="dropdown-item textgrey fuente1 centrar" href="Productos.html">Bucal</a></li>
+              <ul class="dropdown-menu centrar" aria-labelledby="navbarDropdownMenuLink" style="background-color: transparent;">
+          <li><a class="dropdown-item" href="Productos.html">Facial</a></li>
+          <li><a class="dropdown-item" href="Productos.html">Corporal</a></li>
+          <li><a class="dropdown-item" href="Productos.html">Capilar</a></li>
+          <li><a class="dropdown-item" href="Productos.html">Bucal</a></li>
               </ul>
           </li>
           <li class="nav-item">
