--- a/Información.html
+++ b/Información.html
@@ -12,8 +12,10 @@
     <link rel="icon" href="../secciones/logo sustenta.ico">
     <!--Tipografías-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,900;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;700&display=swap" rel="stylesheet">
 </head>
+
+<!-- Header -->
 
 <header class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
@@ -25,23 +27,23 @@
         </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-           <li class="nav-item">
-            <a class="nav-link textgrey fuente1" href="index.html">Inicio</a>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Inicio</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle textgrey fuente1" href="Productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
-              <ul class="dropdown-menu centrar" aria-labelledby="navbarDropdownMenuLink" style="background-color: transparent;">
-          <li><a class="dropdown-item" href="Productos.html">Facial</a></li>
-          <li><a class="dropdown-item" href="Productos.html">Corporal</a></li>
-          <li><a class="dropdown-item" href="Productos.html">Capilar</a></li>
-          <li><a class="dropdown-item" href="Productos.html">Bucal</a></li>
+            <a class="nav-link dropdown-toggle" href="Productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: transparent;">
+          <li><a class="dropdown-item centrar" href="Productos.html">Facial</a></li>
+          <li><a class="dropdown-item centrar" href="Productos.html">Corporal</a></li>
+          <li><a class="dropdown-item centrar" href="Productos.html">Capilar</a></li>
+          <li><a class="dropdown-item centrar" href="Productos.html">Bucal</a></li>
               </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link textgrey fuente1" href="Información.html">Información</a>
+            <a class="nav-link" href="Información.html">Información</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link textgrey fuente1" href="Contacto.html">Contacto</a>
+            <a class="nav-link" href="Contacto.html">Contacto</a>
           </li>
         </ul>
         </div>
@@ -52,48 +54,48 @@
 </header> 
 
 <body>
+
+<!-- Info section -->
 <section>
-<div class="container"  style="padding-top: 5rem;">
-      <div class="col-md-12 col-xs-12">
-        <div class="centrar">
-        <img src="../secciones/Imagenes/imagen1.jpg" alt="eco">
-        <img src="../secciones/Imagenes/imagen2.jpg" alt="friendly">
-        <img src="../secciones/Imagenes/imagen3.jpg" alt="fotohoja">
-        </div>
-      
-
-      <div class="sectInf centrar espacioPalabra" style="background-color: rgb(255, 255, 255);"><h5>Sustenta Tienda es una marca de cosmética natural que elabora productos de higiene y cuidado personal a partir de materias primas naturales de origen vegetal, utilizando las propiedades bioactivas de la naturaleza para la formulación de productos saludables, para las personas y el medio ambiente.</h5></div>
-
-      <div class="sectInf centrar espacioPalabra">
-      <h5>Acerca de las consideraciones ambientales, se procura que las materias primas sean derivadas vegetales, evitando el uso de recursos no renovables como el petróleo, y teniendo en cuenta sus informes de biodegradabilidad, cuando existen. Además muchas de las materias primas utilizadas tienen certificación de producto orgánico o son egroecológicas de productores locales.</h5>
-      </div>
-      
-      </div>
+ 
+<div class="container">
+  <div class="col-md-12">
+    <div class="textHome"><h3>Si estás pensando en implementar productos naturales</h3><h3>y cuidar el medio ambiente</h3><h3>estas en el lugar correcto</h3></div>
+      <div class="sectInfo centrar espacioPalabra"><h5>Sustenta Tienda es un emprendimiento de cosmética natural que cuenta con productos de higiene y cuidado personal a partir de materias primas naturales de origen vegetal, utilizando las propiedades bioactivas de la naturaleza para la formulación de productos saludables, para las personas y el medio ambiente.</h5></div>
+      <div class="sectInfo centrar espacioPalabra"><h5>Acerca de las consideraciones ambientales, se procura que las materias primas sean derivadas vegetales, evitando el uso de recursos no renovables como el petróleo, y teniendo en cuenta sus informes de biodegradabilidad, cuando existen. Además muchas de las materias primas utilizadas tienen certificación de producto orgánico o son egroecológicas de productores locales.</h5></div>
+  </div>
 </div>
 
 </section>
 
 <hr>
 
-<div class="row justify-content-center">
-  <div class="newsletter">
-  <label for="exampleFormControlInput1" class=" titulo textgreen"><h3>Suscribite a nuestro Newsletter</h3></label>
+<!-- Newsletter -->
+
+<div class="newsletter">
+  <label for="exampleFormControlInput1" class="titulo textgreen"><h3>Suscribite a nuestro Newsletter</h3></label>
   <div class="mb-3 inNews">
     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@email.com">
     <button type="button" class="btn btn-outline-secondary">Enviar</button>
   </div>
+</div>
+
+
+<!-- Footer -->
+
+<footer class="row m-0 container-fluid footer" style="justify-content: space-around;">
+  <div class="col-md-2 logo-footer">
+    <img src="../secciones/Imagenes/logo sustenta.png" style="width: 150px;" alt="logo">
   </div>
-</div>
 
-<div class="footer">
-    <h6>Redes sociales
-        <ul>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Facebook</a></li>
-        </ul>
-    </h6>
-</div>
-
+  <div class="col-md-2">
+      <h5 class="textgrey">Redes sociales</h5>
+    <a href="https://www.facebook.com/"><div class="d-flex flex-row-reverse bd-highlight">
+      <div class="p-2 bd-highlight"><button type="button" class="btn btn-secondary btn-lg" style="background-image: url(../secciones/Imagenes/facebook\ \(1\).png); height: 35px;"></button></a><h6>/sustentatienda</h6>
+    <a href="https://www.instagram.com/"><div class="d-flex flex-row-reverse bd-highlight">
+      <div class="p-2 bd-highlight"><button type="button" class="btn btn-secondary btn-lg" style="background-image: url(../secciones/Imagenes/instagram\ \(1\).png); height: 35px;"></button></a><h6>@sustenta.tienda</h6>
+  </div>
+</footer>
 
 
 
@@ -103,5 +105,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+
 </body>
 </html>
