--- a/Contacto.html
+++ b/Contacto.html
@@ -11,9 +11,11 @@
     <link rel="icon" href="../secciones/logo sustenta.ico">
     <!--Tipografías-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,900;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;700&display=swap" rel="stylesheet">
 </head>
- 
+
+<!-- Header -->
+
 <header class="navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
@@ -24,23 +26,23 @@
         </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-           <li class="nav-item">
-            <a class="nav-link textgrey fuente1" href="index.html">Inicio</a>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Inicio</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle textgrey fuente1" href="Productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
-              <ul class="dropdown-menu centrar" aria-labelledby="navbarDropdownMenuLink" style="background-color: transparent;">
-          <li><a class="dropdown-item" href="Productos.html">Facial</a></li>
-          <li><a class="dropdown-item" href="Productos.html">Corporal</a></li>
-          <li><a class="dropdown-item" href="Productos.html">Capilar</a></li>
-          <li><a class="dropdown-item" href="Productos.html">Bucal</a></li>
+            <a class="nav-link dropdown-toggle" href="Productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: transparent;">
+          <li><a class="dropdown-item centrar" href="Productos.html">Facial</a></li>
+          <li><a class="dropdown-item centrar" href="Productos.html">Corporal</a></li>
+          <li><a class="dropdown-item centrar" href="Productos.html">Capilar</a></li>
+          <li><a class="dropdown-item centrar" href="Productos.html">Bucal</a></li>
               </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link textgrey fuente1" href="Información.html">Información</a>
+            <a class="nav-link" href="Información.html">Información</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link textgrey fuente1" href="Contacto.html">Contacto</a>
+            <a class="nav-link" href="Contacto.html">Contacto</a>
           </li>
         </ul>
         </div>
@@ -51,52 +53,69 @@
 </header>
 
 <body>
-  <section>
-    <div class="container"  style="padding-top: 5rem;">
+
+<!-- Form de contacto -->
+
+  <section class="contacto">
+    <div class="container">
       <div class="row col-md-12">
         <form action="#" method="GET" enctype="multipart/form-data">
         <fieldset>
             <div>
-                <legend class="otrafuente centrar" style="color:gray"><h3>Si tenes dudas o preguntas, ¡escribinos!</legend></h3></div>
+                <legend class="conTitle" style="color:gray"><h3>Si tenes dudas o preguntas, ¡escribinos!</legend></h3></div>
                     <div class="mb-3" style="color: gray;">
-                        <label for="exampleFormControlInput1" class="otrafuente form-label">Nombre</label>
+                        <label for="exampleFormControlInput1" class="form-label">Nombre</label>
                         <input class="form-control" id="exampleFormControlInput1">
                     </div>
                     <div class="mb-3" style="color: gray;">
-                        <label for="exampleFormControlInput1" class="otrafuente form-label">E-mail</label>
+                        <label for="exampleFormControlInput1" class="form-label">E-mail</label>
                         <input type="email" class="form-control" id="exampleFormControlInput1">
                     </div>
                     <div class="mb-3" style="color: gray;">
-                        <label for="exampleFormControlTextarea1" class="otrafuente form-label">Consulta</label>
+                        <label for="exampleFormControlTextarea1" class="form-label">Consulta</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
             </div>
-                
         </fieldset>
-        <div class="otrafuente">
-            <input style="color: gray;" type="submit" value="Enviar formulario">   
-            <input style="color: gray;" type="reset" value="Limpiar formulario">
-        </div>
+          <input style="color: gray;" type="submit" value="Enviar formulario">   
+          <input style="color: gray;" type="reset" value="Limpiar formulario">
       </div>
     </div>
   </section>
+<hr>
 
-<br>
-
-<div class="footer">
-    <h6>Redes sociales
-        <ul>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Facebook</a></li>
-        </ul>
-    </h6>
+<!-- Newsletter -->
+  
+<div class="newsletter">
+  <label for="exampleFormControlInput1" class="titulo textgreen centrar"><h3>Suscribite a nuestro Newsletter</h3></label>
+    <div class="mb-3 inNews">
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@email.com">
+    <button type="button" class="btn btn-outline-secondary">Enviar</button>
+    </div>
 </div>
 
+
+<!-- Footer -->
+
+<footer class="row m-0 container-fluid footer" style="justify-content: space-around;">
+  <div class="col-md-2 logo-footer">
+    <img src="../secciones/Imagenes/logo sustenta.png" style="width: 150px;" alt="logo">
+  </div>
+
+  <div class="col-md-2">
+      <h5 class="textgrey">Redes sociales</h5>
+    <a href="https://www.facebook.com/"><div class="d-flex flex-row-reverse bd-highlight">
+      <div class="p-2 bd-highlight"><button type="button" class="btn btn-secondary btn-lg" style="background-image: url(../secciones/Imagenes/facebook\ \(1\).png); height: 35px;"></button></a><h6>/sustentatienda</h6>
+    <a href="https://www.instagram.com/"><div class="d-flex flex-row-reverse bd-highlight">
+      <div class="p-2 bd-highlight"><button type="button" class="btn btn-secondary btn-lg" style="background-image: url(../secciones/Imagenes/instagram\ \(1\).png); height: 35px;"></button></a><h6>@sustenta.tienda</h6>
+  </div>
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+
 </body>
 </html>
