--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <!-- Section 1 -->
 <div class="container">
-  <div class="textHome"><h2>Productos naturales multimarca</h2><h2>para el cuidado personal</h2><h2>y del medio ambiente</h2></div>
+  <div class="textHome" style="background-image: url(Imagenes/ecofriendly3.png);"><h2>Productos naturales multimarca</h2><h2>para el cuidado personal</h2><h2>y del medio ambiente</h2></div>
 </div>
 
 <section class="container-fluid carrousel">
@@ -155,7 +155,7 @@
 
 <!-- Footer -->
 
-<footer class="row m-0 container-fluid footer" style="justify-content: space-around;">
+<footer class="row m-0 container-fluid footer" style="justify-content: space-around; background-image: url(Imagenes/ecofriendly3.png);">
   <div class="col-md-2 logo-footer">
     <img src="Imagenes/logo sustenta.png" style="width: 150px;" alt="logo">
   </div>
@@ -177,3 +177,4 @@
  
 </body>
 </html>
+
