--- a/Productos.html
+++ b/Productos.html
@@ -366,7 +366,7 @@
 
 <!-- Footer -->
 
-<footer class="row m-0 container-fluid footer" style="justify-content: space-around;">
+<footer class="row m-0 container-fluid footer" style="justify-content: space-around; background-image: url(Imagenes/ecofriendly3.png);">
   <div class="col-md-2 logo-footer">
     <img src="Imagenes/logo sustenta.png" style="width: 150px;" alt="logo">
   </div>
