--- a/Información.html
+++ b/Información.html
@@ -60,7 +60,7 @@
  
 <div class="container">
   <div class="col-md-12">
-    <div class="textHome"><h3>Si estás pensando en implementar productos naturales</h3><h3>y cuidar el medio ambiente</h3><h3>estas en el lugar correcto</h3></div>
+    <div class="textHome" style="background-image: url(Imagenes/ecofriendly3.png);"><h3>Si estás pensando en implementar productos naturales</h3><h3>y cuidar el medio ambiente</h3><h3>estas en el lugar correcto</h3></div>
       <div class="sectInfo centrar espacioPalabra"><h5>Sustenta Tienda es un emprendimiento de cosmética natural que cuenta con productos de higiene y cuidado personal a partir de materias primas naturales de origen vegetal, utilizando las propiedades bioactivas de la naturaleza para la formulación de productos saludables, para las personas y el medio ambiente.</h5></div>
       <div class="sectInfo centrar espacioPalabra"><h5>Acerca de las consideraciones ambientales, se procura que las materias primas sean derivadas vegetales, evitando el uso de recursos no renovables como el petróleo, y teniendo en cuenta sus informes de biodegradabilidad, cuando existen. Además muchas de las materias primas utilizadas tienen certificación de producto orgánico o son egroecológicas de productores locales.</h5></div>
   </div>
@@ -83,7 +83,7 @@
 
 <!-- Footer -->
 
-<footer class="row m-0 container-fluid footer" style="justify-content: space-around;">
+<footer class="row m-0 container-fluid footer" style="justify-content: space-around; background-image: url(Imagenes/ecofriendly3.png);">
   <div class="col-md-2 logo-footer">
     <img src="Imagenes/logo sustenta.png" style="width: 150px;" alt="logo">
   </div>
